--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
   </template>
 
   <!-- <script src="js/main.js"></script> -->
+  <script src="js/utils.js"></script>
   <script src="js/data.js"></script>
-  <script src="js/gallery.js"></script>
   <script src="js/picture.js"></script>
   <script src="js/preview.js"></script>
   <script src="js/form.js"></script>
