--- a/index.html
+++ b/index.html
@@ -238,6 +238,9 @@
   <script src="js/data.js"></script>
   <script src="js/picture.js"></script>
   <script src="js/preview.js"></script>
+  <script src="js/imageEffect.js"></script>
+  <script src="js/imageScale.js"></script>
+  <script src="js/formValidate.js"></script>
   <script src="js/form.js"></script>
 </body>
 </html>
