--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
   </template>
 
   <!-- <script src="js/main.js"></script> -->
+  <script src="js/backend.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/data.js"></script>
   <script src="js/picture.js"></script>
