Настроен интерфейс для фильтрации пользовательских фоторгафий

--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 
   <script src="js/backend.js"></script>
   <script src="js/picture.js"></script>
+  <script src="js/filter.js"></script>
   <script src="js/preview.js"></script>
   <script src="js/imageEffect.js"></script>
   <script src="js/imageScale.js"></script>
