Выполнено задание 21 - Личный проект: фото на память

--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
   </template>
 
   <script src="js/utils.js"></script>
+  <script src="js/loadPhoto.js"></script>
   <script src="js/debounce.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/picture.js"></script>
